--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
-torch==2.2.0
-torchvision==0.17.0
-torchaudio==2.2.0
+torch
+torchvision
+torchaudio
 soundfile
 numpy==1.26.4
-torch_audiomentations
+torchmetrics
 tqdm
 matplotlib
 pandas
 wandb
 comet_ml
 hydra-core
+datasets
+editdistance
+wget
+gdown
+pathlib
+kenlm
+pyctcdecode
 
 black
 isort
